--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -162,12 +162,24 @@
      "output_type": "stream",
      "text": [
       "Linear SVM resubstitution error : \n",
+      "Best pair of features : \n",
+      " 4     LOC51203\n",
+      "20        MMP9\n",
+      "Name: 0, dtype: object  indexed at : [4, 20]\n",
       "E0 :  0.05  E1 :  0.375  E :  0.2125 \n",
       "\n",
       "RBF SVM resubstitution error : \n",
+      "Best pair of features : \n",
+      " 4     LOC51203\n",
+      "13    KIAA1442\n",
+      "Name: 0, dtype: object  indexed at : [4, 13]\n",
       "E0 :  0.225  E1 :  0.075  E :  0.15 \n",
       "\n",
       "NN resubstitution error : \n",
+      "Best pair of features : \n",
+      " 4     LOC51203\n",
+      "13    KIAA1442\n",
+      "Name: 0, dtype: object  indexed at : [4, 13]\n",
       "E0 :  0.15  E1 :  0.15  E :  0.15 \n",
       "\n"
      ]
@@ -179,14 +191,17 @@
     "# Linear SVM performance on test set\n",
     "E0, E1, E = linear_svm (data, best_pair_lin_svm, data, True)\n",
     "print (\"Linear SVM resubstitution error : \")\n",
+    "print (\"Best pair of features : \\n\", data_col[best_pair_lin_svm], \" indexed at :\", best_pair_lin_svm)\n",
     "print (\"E0 : \", E0, \" E1 : \", E1, \" E : \", E, \"\\n\")\n",
     "\n",
     "E0, E1, E = rbf_svm (data, best_pair_rbf_svm, data, True)\n",
     "print (\"RBF SVM resubstitution error : \")\n",
+    "print (\"Best pair of features : \\n\", data_col[best_pair_rbf_svm], \" indexed at :\", best_pair_rbf_svm)\n",
     "print (\"E0 : \", E0, \" E1 : \", E1, \" E : \", E, \"\\n\")\n",
     "\n",
     "E0, E1, E = nn (data, best_pair_nn, data, True)\n",
     "print (\"NN resubstitution error : \")\n",
+    "print (\"Best pair of features : \\n\", data_col[best_pair_nn], \" indexed at :\", best_pair_nn)\n",
     "print (\"E0 : \", E0, \" E1 : \", E1, \" E : \", E, \"\\n\")"
    ]
   },
@@ -375,12 +390,27 @@
      "output_type": "stream",
      "text": [
       "Linear SVM Resubstitution for 3 features : \n",
+      "Seq 3 features : \n",
+      " 28      SERF1A\n",
+      "20        MMP9\n",
+      "4     LOC51203\n",
+      "Name: 0, dtype: object  indexed at : [28, 20, 4]\n",
       "E0 :  0.05  E1 :  0.35  E :  0.2 \n",
       "\n",
       "RBF SVM Resubstitution error for 3 features : \n",
+      "Seq 3 features : \n",
+      " 13          KIAA1442\n",
+      "34    Contig46223_RC\n",
+      "7     Contig38288_RC\n",
+      "Name: 0, dtype: object  indexed at : [13, 34, 7]\n",
       "E0 :  0.075  E1 :  0.1  E :  0.0875 \n",
       "\n",
       "NN Resubstitution error for 3 features : \n",
+      "Seq 3 features : \n",
+      " 40    KIAA0175\n",
+      "36        PECI\n",
+      "42       L2DTL\n",
+      "Name: 0, dtype: object  indexed at : [40, 36, 42]\n",
       "E0 :  0.1  E1 :  0.175  E :  0.1375 \n",
       "\n"
      ]
@@ -391,14 +421,17 @@
     "\n",
     "E0, E1, E = linear_svm (data, best_features_for_3[0], data, True)\n",
     "print (\"Linear SVM Resubstitution for 3 features : \")\n",
+    "print (\"Seq 3 features : \\n\", data_col[best_features_for_3[0]], \" indexed at :\", best_features_for_3[0])\n",
     "print (\"E0 : \", E0, \" E1 : \", E1, \" E : \", E, \"\\n\")\n",
     "\n",
     "E0, E1, E = rbf_svm (data, best_features_for_3[1], data, True)\n",
     "print (\"RBF SVM Resubstitution error for 3 features : \")\n",
+    "print (\"Seq 3 features : \\n\", data_col[best_features_for_3[1]], \" indexed at :\", best_features_for_3[1])\n",
     "print (\"E0 : \", E0, \" E1 : \", E1, \" E : \", E, \"\\n\")\n",
     "\n",
     "E0, E1, E = nn (data, best_features_for_3[2], data, True)\n",
     "print (\"NN Resubstitution error for 3 features : \")\n",
+    "print (\"Seq 3 features : \\n\", data_col[best_features_for_3[2]], \" indexed at :\", best_features_for_3[2])\n",
     "print (\"E0 : \", E0, \" E1 : \", E1, \" E : \", E, \"\\n\")"
    ]
   },
@@ -482,12 +515,30 @@
      "output_type": "stream",
      "text": [
       "Linear SVM Resubstitution for 4 features :  \n",
+      "Seq 4 features : \n",
+      " 6        ALDH4\n",
+      "28      SERF1A\n",
+      "20        MMP9\n",
+      "4     LOC51203\n",
+      "Name: 0, dtype: object  indexed at : [6, 28, 20, 4]\n",
       "E0 :  0.05  E1 :  0.325  E :  0.1875 \n",
       "\n",
       "RBF SVM Resubstitution for 4 features : \n",
+      "Seq 4 features : \n",
+      " 23              ECT2\n",
+      "13          KIAA1442\n",
+      "34    Contig46223_RC\n",
+      "7     Contig38288_RC\n",
+      "Name: 0, dtype: object  indexed at : [23, 13, 34, 7]\n",
       "E0 :  0.05  E1 :  0.025  E :  0.0375 \n",
       "\n",
       "NN Resubstitution for 4 features : \n",
+      "Seq 4 features : \n",
+      " 58    LOC57110\n",
+      "40    KIAA0175\n",
+      "36        PECI\n",
+      "42       L2DTL\n",
+      "Name: 0, dtype: object  indexed at : [58, 40, 36, 42]\n",
       "E0 :  0.2  E1 :  0.1  E :  0.15 \n",
       "\n"
      ]
@@ -498,14 +549,17 @@
     "\n",
     "E0, E1, E = linear_svm (data, best_features_for_4[0], data, True)\n",
     "print (\"Linear SVM Resubstitution for 4 features :  \")\n",
+    "print (\"Seq 4 features : \\n\", data_col[best_features_for_4[0]], \" indexed at :\", best_features_for_4[0])\n",
     "print (\"E0 : \", E0, \" E1 : \", E1, \" E : \", E, \"\\n\")\n",
     "\n",
     "E0, E1, E = rbf_svm (data, best_features_for_4[1], data, True)\n",
     "print (\"RBF SVM Resubstitution for 4 features : \")\n",
+    "print (\"Seq 4 features : \\n\", data_col[best_features_for_4[1]], \" indexed at :\", best_features_for_4[1])\n",
     "print (\"E0 : \", E0, \" E1 : \", E1, \" E : \", E, \"\\n\")\n",
     "\n",
     "E0, E1, E = nn (data, best_features_for_4[2], data, True)\n",
     "print (\"NN Resubstitution for 4 features : \")\n",
+    "print (\"Seq 4 features : \\n\", data_col[best_features_for_4[2]], \" indexed at :\", best_features_for_4[2])\n",
     "print (\"E0 : \", E0, \" E1 : \", E1, \" E : \", E, \"\\n\")"
    ]
   },
@@ -589,12 +643,33 @@
      "output_type": "stream",
      "text": [
       "Linear SVM Resubstitution for 5 features :  \n",
+      "Seq 5 features : \n",
+      " 45    Contig51464_RC\n",
+      "6              ALDH4\n",
+      "28            SERF1A\n",
+      "20              MMP9\n",
+      "4           LOC51203\n",
+      "Name: 0, dtype: object  indexed at : [45, 6, 28, 20, 4]\n",
       "E0 :  0.05  E1 :  0.325  E :  0.1875 \n",
       "\n",
       "RBF SVM Resubstitution for 5 features : \n",
+      "Seq 5 features : \n",
+      " 64              PRC1\n",
+      "23              ECT2\n",
+      "13          KIAA1442\n",
+      "34    Contig46223_RC\n",
+      "7     Contig38288_RC\n",
+      "Name: 0, dtype: object  indexed at : [64, 23, 13, 34, 7]\n",
       "E0 :  0.025  E1 :  0.0  E :  0.0125 \n",
       "\n",
       "NN Resubstitution for 5 features : \n",
+      "Seq 5 features : \n",
+      " 61         NMU\n",
+      "58    LOC57110\n",
+      "40    KIAA0175\n",
+      "36        PECI\n",
+      "42       L2DTL\n",
+      "Name: 0, dtype: object  indexed at : [61, 58, 40, 36, 42]\n",
       "E0 :  0.075  E1 :  0.075  E :  0.075 \n",
       "\n"
      ]
@@ -605,14 +680,17 @@
     "\n",
     "E0, E1, E = linear_svm (data, best_features_for_5[0], data, True)\n",
     "print (\"Linear SVM Resubstitution for 5 features :  \")\n",
+    "print (\"Seq 5 features : \\n\", data_col[best_features_for_5[0]], \" indexed at :\", best_features_for_5[0])\n",
     "print (\"E0 : \", E0, \" E1 : \", E1, \" E : \", E, \"\\n\")\n",
     "\n",
     "E0, E1, E = rbf_svm (data, best_features_for_5[1], data, True)\n",
     "print (\"RBF SVM Resubstitution for 5 features : \")\n",
+    "print (\"Seq 5 features : \\n\", data_col[best_features_for_5[1]], \" indexed at :\", best_features_for_5[1])\n",
     "print (\"E0 : \", E0, \" E1 : \", E1, \" E : \", E, \"\\n\")\n",
     "\n",
     "E0, E1, E = nn (data, best_features_for_5[2], data, True)\n",
     "print (\"NN Resubstitution for 5 features : \")\n",
+    "print (\"Seq 5 features : \\n\", data_col[best_features_for_5[2]], \" indexed at :\", best_features_for_5[2])\n",
     "print (\"E0 : \", E0, \" E1 : \", E1, \" E : \", E, \"\\n\")"
    ]
   },
@@ -801,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
